# nlcalc

./: .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  README.md  deploy.sh  setup.py
apps/: CMakeLists.txt
include/nlcalc/: image.h  nlcalc.h
include/nlnum/: nlnum.h  partitions_in.h
src/: CMakeLists.txt  image.cc  module.cc  nlcalc.cc  nlnum.cc  partitions_in.cc
tests/: CMakeLists.txt  test_nlcalc.cc  test_nlnum.cc
